--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h2 id="chaos">Chaos</h2>
+        <h2 id="chaos">Chaos Nerds</h2>
         <h1>Smite</h1>
         <h2 id="order">Order</h2>
     </header>
