css fixes for pick ban grid

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h2 id="chaos">Chaos Nerds</h2>
+        <h2 id="chaos">Chaos</h2>
         <h1>Smite</h1>
         <h2 id="order">Order</h2>
     </header>
@@ -32,23 +32,22 @@
             </div>
         </section>
         <section id="selector" class="column large">
-            <div class="row sm">
-                <div class="column">
-                <div class="column">
-                <div class="column">
-                <div class="column">
-                <div class="column">
-            </div>
             <div class="row lg">
+
             </div>
             <div class="row sm">
-                <div class="column">
-                <div class="column">
-                <div class="column">
-                <div class="column">
-                <div class="column">
+                <div class="col"></div>
+                <div class="col"></div>
+                <div class="col"></div>
+                <div class="col"></div>
+                <div class="col"></div>
             </div>
-
+            <div class="row sm">
+                <div class="col"></div>
+                <div class="col"></div>
+                <div class="col"></div>
+                <div class="col"></div>
+                <div class="col"></div>
             </div>
         </section>
         <section class="column small">
