quick color changes for pick screen

--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 </head>
 <body>
     <header>
-        <h2 id="chaos">Chaos</h2>
-        <h1>Smite</h1>
+        
+        
         <h2 id="order">Order</h2>
+        <h1>Smite</h1>
+        <h2 id="chaos">Chaos</h2>
     </header>
     <main>
         <section class="column small">
@@ -35,14 +37,14 @@
             <div class="row lg">
 
             </div>
-            <div class="row sm">
+            <div class="row sm blue">
                 <div class="col"></div>
                 <div class="col"></div>
                 <div class="col"></div>
                 <div class="col"></div>
                 <div class="col"></div>
             </div>
-            <div class="row sm">
+            <div class="row sm red">
                 <div class="col"></div>
                 <div class="col"></div>
                 <div class="col"></div>
