added team ban outline

--- a/index.html
+++ b/index.html
@@ -37,10 +37,34 @@
             <div class="row lg">
 
             </div>
+            <div class="teamPicks 1">
+                <div class="row round1">
+                    <div class="pick"></div>
+                    <div class="pick"></div>        
+                    <div class="pick"></div>        
+                </div>
+                <div class="row round2">
+                    <div class="pick"></div>   
+                    <div class="pick"></div>        
+                </div>
+            </div>
+            <div class="teamPicks flr">
+                <div class="row round1">
+                    <div class="pick"></div>
+                    <div class="pick"></div>        
+                    <div class="pick"></div>        
+                </div>
+                <div class="row round2">
+                    <div class="pick"></div>   
+                    <div class="pick"></div>        
+                </div>
+            </div>
+            <!-- <div class="row sm blue">
+                <div class="col"></div>
+                <div class="col"></div>
+                <div class="col"></div>
+            </div>
             <div class="row sm blue">
-                <div class="col"></div>
-                <div class="col"></div>
-                <div class="col"></div>
                 <div class="col"></div>
                 <div class="col"></div>
             </div>
@@ -48,9 +72,11 @@
                 <div class="col"></div>
                 <div class="col"></div>
                 <div class="col"></div>
-                <div class="col"></div>
-                <div class="col"></div>
             </div>
+            <div class="row sm red">
+                <div class="col"></div>
+                <div class="col"></div>
+            </div> -->
         </section>
         <section class="column small">
             <div class="player red">
