Added to selector

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
         </section>
         <section id="selector" class="column large">
-            <div class="row lg">
+            <div id="picks" class="row lg">
 
             </div>
             <div class="teamPicks 1">
