basic functionality for type selector

--- a/index.html
+++ b/index.html
@@ -34,8 +34,15 @@
             </div>
         </section>
         <section id="selector" class="column large">
-            <div id="picks" class="row lg">
-
+            <div class="row lg">
+                <div id="typeSelector">
+                    <div class="type">Warrior</div>
+                    <div class="type">Mage</div>
+                    <div class="type">Hunter</div>
+                    <div class="type">Guardian</div>
+                    <div class="type">Assassin</div>
+                </div>
+                <div id="picks"></div>
             </div>
             <div class="teamPicks 1">
                 <div class="row round1">
