a few more changes to picks

--- a/index.html
+++ b/index.html
@@ -107,6 +107,8 @@
     <footer>
         <h3>We are your go to ItemFinders</h3>
     </footer>
-    <script src="./main.js"></script>
+    <script type="module" src="./scripts/main.js"></script>
+    <script type="module" src="./scripts/gods.js"></script>
+
 </body>
 </html>
