stylistic changes and drag/drop functionality

--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
                 </div>
             </div>
             <div class="teamPicks flr">
-                <div class="row round1">
+                <div class="row round1 last">
                     <div class="pick"></div>
                     <div class="pick"></div>        
                     <div class="pick"></div>        
                 </div>
-                <div class="row round2">
+                <div class="row round2 last">
                     <div class="pick"></div>   
                     <div class="pick"></div>        
                 </div>
