typeSelector style changes

--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
         <section id="selector" class="column large">
             <div class="row lg">
                 <div id="typeSelector">
-                    <div class="type">Warrior</div>
-                    <div class="type">Mage</div>
-                    <div class="type">Hunter</div>
-                    <div class="type">Guardian</div>
-                    <div class="type">Assassin</div>
+                    <div class="type warrior">Warrior</div>
+                    <div class="type mage">Mage</div>
+                    <div class="type hunter">Hunter</div>
+                    <div class="type guardian">Guardian</div>
+                    <div class="type assassin">Assassin</div>
                 </div>
                 <div id="picks"></div>
             </div>
